# menu-bot

./: .env.dist  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  ioc.py  main.py  pyproject.toml
application/: dto.py  handlers.py  interactors.py  interfaces.py
application/routers/: add_dish.py  all_dishes.py  delete_dish.py  generate_menu.py  main_menu.py
domain/: entities.py
infrastructure/: database.py  gateways.py  models.py
migrations/: env.py
migrations/versions/: 0c3eafd9f60b_initial_migration.py  6ac95e8eedf2_add_owner_column_to_dishes.py  8ec6c90fd6ad_add_dish_type_column_to_dishes.py
