[tool.poetry]
name = "menu-bot"
version = "0.1.0"
description = ""
authors = ["lreznichenko"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.17.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg = "^3.2.4"
dishka = "^1.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
